--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,14 +1,3 @@
 {
-  "exclude": [
-    "*.log",
-    "builds",
-    "coverage",
-    "dist",
-    "docs",
-    "lavamoat",
-    "node:console",
-    "node_modules",
-    "patches",
-    "test-artifacts"
-  ]
+  "exclude": ["node:console"]
 }
